# releaseguard

./: .env.example  .gitignore  README.md  pyproject.toml
data/evaluations/: requirements.json
data/samples/: account_deletion.md
docs/: evaluation_results.md  kaggle_submission_draft.md  video_script.md
docs/demo/: account_deletion_report.md
specs/: architecture.md  implementation_plan.md  mvp_scope.md  project_brief.md
src/releaseguard/: cli.py
src/releaseguard/agents/: llm_requirement_analyzer.py  release_judge.py  requirement_analyzer.py  risk_security_auditor.py  test_strategist.py
src/releaseguard/core/: baseline.py  evaluator.py  guardrails.py  orchestrator.py
src/releaseguard/schemas/: models.py
src/releaseguard/utils/: report_writer.py
templates/: release_report.md.j2
tests/: test_guardrails.py  test_pipeline.py
